fix: don't set body width to remove scrollbar

--- a/src/app.css
+++ b/src/app.css
@@ -57,7 +57,6 @@
 html,
 body {
 	height: 100%;
-	width: 100vw;
 }
 
 html {
